# models/contact.js
@@ -4,6 +4,9 @@ const Contact = mongoose.model('Contact', {
     name: String,
     email: String,
     telephone: Number,
+    address: String,
+    company: String,
+    status: Boolean,
 })
-
-module.exports = Contact
+ 
+module.exports = Contact 
